tools/deployment/website/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biodiversity-website
  namespace: production
spec:
  selector:
    matchLabels:
      app: biodiversity-website
  template:
    metadata:
      labels:
        app: biodiversity-website
    spec:
      containers:
        - name: biodiversity-website
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/biodiversity-website:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '100Mi'
              cpu: '200m'
            limits:
              memory: '500Mi'
              cpu: '1000m'
