tools/deployment/website/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: arbimon-api-ingress
  namespace: production
  labels:
    app: arbimon
spec:
  rules:
    - host: arbimon.org
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: biodiversity-api-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/limit-rpm: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
  name: arbimon-legacy-api-ingress
  namespace: production
  labels:
    app: arbimon
spec:
  rules:
    - host: arbimon.org
      http:
        paths:
          - path: /legacy-api
            pathType: Prefix
            backend:
              serviceName: arbimon-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
  name: arbimon-combined-ingress
  namespace: production
  labels:
    app: arbimon
spec:
  rules:
  - host: arbimon.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: biodiversity-website-service
          servicePort: 80
      - path: /admin
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /classifiers
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /legacy-login
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /legacy-login-callback
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /legacy-logout
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /fonts
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /images
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /includes
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /project
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /citizen-scientist
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
  name: arbimon-core-ingress
  namespace: production
  labels:
    app: biodiversity-website
spec:
  rules:
  - host: core.arbimon.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: core-api-service
          servicePort: 80
  - host: media.arbimon.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: media-api-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://arbimon.org
  name: arbimon-ingress-org-redirect
  namespace: production
  labels:
    app: biodiversity-website
spec:
  rules:
    - host: arbimon.rfcx.org
    - host: bio.rfcx.org
    - host: www.arbimon.org
